--- a/MCI_Cleaning and Exploring.ipynb
+++ b/MCI_Cleaning and Exploring.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "89d842df",
       "metadata": {
         "id": "89d842df"
@@ -46,15 +46,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "24528282",
       "metadata": {
+        "id": "24528282",
+        "outputId": "904991b1-eb7e-487c-9dd5-9091aa3be7a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
-        },
-        "id": "24528282",
-        "outputId": "26a66de9-eb03-4793-da79-968b40ddc85a"
+        }
       },
       "outputs": [
         {
@@ -143,7 +143,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7042536a-16ed-4837-aae1-494b1345cc11\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -457,7 +457,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7042536a-16ed-4837-aae1-494b1345cc11')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -509,12 +509,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7042536a-16ed-4837-aae1-494b1345cc11 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7042536a-16ed-4837-aae1-494b1345cc11');\n",
+              "        const element = document.querySelector('#df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -534,8 +534,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ee36912b-58f4-476d-8169-a2d15441b456\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee36912b-58f4-476d-8169-a2d15441b456')\"\n",
+              "<div id=\"df-81615a02-7e25-4136-a4e0-b82e4400f82b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-81615a02-7e25-4136-a4e0-b82e4400f82b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -654,14 +654,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ee36912b-58f4-476d-8169-a2d15441b456 button');\n",
+              "        document.querySelector('#df-81615a02-7e25-4136-a4e0-b82e4400f82b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_64a626a5-5930-42d0-a195-db11ec62b59c\">\n",
+              "  <div id=\"id_627d9997-92a2-4e0c-9b21-e79fee9e466b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -705,7 +705,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_64a626a5-5930-42d0-a195-db11ec62b59c button.colab-df-generate');\n",
+              "        document.querySelector('#id_627d9997-92a2-4e0c-9b21-e79fee9e466b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -725,7 +725,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ],
       "source": [
@@ -746,16 +746,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "12632c7e",
       "metadata": {
         "id": "12632c7e",
-        "outputId": "ccacd0d8-0dbb-4299-ba38-a0d7282fc0e7"
+        "outputId": "12d34c13-9eb6-4bd2-b57d-df0731feb514",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 420200 entries, 0 to 420199\n",
@@ -815,16 +818,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "e79631de",
       "metadata": {
         "id": "e79631de",
-        "outputId": "4b102ad5-1394-4f56-97f4-c0ada73e8563"
+        "outputId": "49b512a8-0e8a-4500-fc6f-466b6cf0ec41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "OBJECTID               0\n",
             "EVENT_UNIQUE_ID        0\n",
@@ -867,16 +873,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "a6094ebf",
       "metadata": {
         "id": "a6094ebf",
-        "outputId": "4650e198-2d35-49cd-e390-83685b073dae"
+        "outputId": "e7b839f5-b989-4ecd-8aa6-227c6bf8afa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0.00034269395525940026\n"
           ]
@@ -889,13 +898,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "7beeaa11",
       "metadata": {
         "id": "7beeaa11"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "clean_mci_df = mci_df.dropna()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(clean_mci_df.isnull().sum())"
+      ],
+      "metadata": {
+        "id": "amRcTL6998CB",
+        "outputId": "83a86e26-79a7-4c59-a8e9-377a99a5c855",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "amRcTL6998CB",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OBJECTID             0\n",
+            "EVENT_UNIQUE_ID      0\n",
+            "REPORT_DATE          0\n",
+            "OCC_DATE             0\n",
+            "REPORT_YEAR          0\n",
+            "REPORT_MONTH         0\n",
+            "REPORT_DAY           0\n",
+            "REPORT_DOY           0\n",
+            "REPORT_DOW           0\n",
+            "REPORT_HOUR          0\n",
+            "OCC_YEAR             0\n",
+            "OCC_MONTH            0\n",
+            "OCC_DAY              0\n",
+            "OCC_DOY              0\n",
+            "OCC_DOW              0\n",
+            "OCC_HOUR             0\n",
+            "DIVISION             0\n",
+            "LOCATION_TYPE        0\n",
+            "PREMISES_TYPE        0\n",
+            "UCR_CODE             0\n",
+            "UCR_EXT              0\n",
+            "OFFENCE              0\n",
+            "MCI_CATEGORY         0\n",
+            "HOOD_158             0\n",
+            "NEIGHBOURHOOD_158    0\n",
+            "HOOD_140             0\n",
+            "NEIGHBOURHOOD_140    0\n",
+            "LONG_WGS84           0\n",
+            "LAT_WGS84            0\n",
+            "x                    0\n",
+            "y                    0\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Rx0KfKbw-Aid"
+      },
+      "id": "Rx0KfKbw-Aid",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
