--- a/MCI_Cleaning and Exploring.ipynb
+++ b/MCI_Cleaning and Exploring.ipynb
@@ -49,12 +49,12 @@
       "execution_count": 4,
       "id": "24528282",
       "metadata": {
-        "id": "24528282",
-        "outputId": "904991b1-eb7e-487c-9dd5-9091aa3be7a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 790
-        }
+        },
+        "id": "24528282",
+        "outputId": "904991b1-eb7e-487c-9dd5-9091aa3be7a7"
       },
       "outputs": [
         {
@@ -749,11 +749,11 @@
       "execution_count": 5,
       "id": "12632c7e",
       "metadata": {
-        "id": "12632c7e",
-        "outputId": "12d34c13-9eb6-4bd2-b57d-df0731feb514",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "12632c7e",
+        "outputId": "12d34c13-9eb6-4bd2-b57d-df0731feb514"
       },
       "outputs": [
         {
@@ -821,11 +821,11 @@
       "execution_count": 6,
       "id": "e79631de",
       "metadata": {
-        "id": "e79631de",
-        "outputId": "49b512a8-0e8a-4500-fc6f-466b6cf0ec41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e79631de",
+        "outputId": "49b512a8-0e8a-4500-fc6f-466b6cf0ec41"
       },
       "outputs": [
         {
@@ -876,11 +876,11 @@
       "execution_count": 7,
       "id": "a6094ebf",
       "metadata": {
-        "id": "a6094ebf",
-        "outputId": "e7b839f5-b989-4ecd-8aa6-227c6bf8afa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a6094ebf",
+        "outputId": "e7b839f5-b989-4ecd-8aa6-227c6bf8afa6"
       },
       "outputs": [
         {
@@ -914,11 +914,11 @@
         "print(clean_mci_df.isnull().sum())"
       ],
       "metadata": {
-        "id": "amRcTL6998CB",
-        "outputId": "83a86e26-79a7-4c59-a8e9-377a99a5c855",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "amRcTL6998CB",
+        "outputId": "83a86e26-79a7-4c59-a8e9-377a99a5c855"
       },
       "id": "amRcTL6998CB",
       "execution_count": 10,
@@ -964,14 +964,39 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "Rx0KfKbw-Aid"
+        "id": "tpxI_pEy_rSm"
+      },
+      "id": "tpxI_pEy_rSm"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cleaned_file_path = \"cleaned_data_mci.csv\"\n",
+        "clean_mci_df.to_csv(cleaned_file_path, index=False)\n",
+        "\n",
+        "print(f\"Cleaned file saved as {cleaned_file_path}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rx0KfKbw-Aid",
+        "outputId": "bc58e65d-58f9-49cc-b602-589469299d03"
       },
       "id": "Rx0KfKbw-Aid",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cleaned file saved as cleaned_data_mci.csv\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
