--- a/MCI_Cleaning and Exploring.ipynb
+++ b/MCI_Cleaning and Exploring.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "id": "89d842df",
       "metadata": {
         "id": "89d842df"
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "id": "24528282",
       "metadata": {
         "colab": {
@@ -54,7 +54,7 @@
           "height": 790
         },
         "id": "24528282",
-        "outputId": "904991b1-eb7e-487c-9dd5-9091aa3be7a7"
+        "outputId": "037837cd-20df-470e-a04c-61050e16588d"
       },
       "outputs": [
         {
@@ -143,7 +143,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bf58d448-be17-4069-859b-3549edd61fea\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -457,7 +457,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf58d448-be17-4069-859b-3549edd61fea')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -509,12 +509,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bf58d448-be17-4069-859b-3549edd61fea button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4fa6d22f-fc7d-4111-ba5a-aaf853a587c8');\n",
+              "        const element = document.querySelector('#df-bf58d448-be17-4069-859b-3549edd61fea');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -534,8 +534,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-81615a02-7e25-4136-a4e0-b82e4400f82b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-81615a02-7e25-4136-a4e0-b82e4400f82b')\"\n",
+              "<div id=\"df-b9ee9add-4e59-48b2-8af4-da555ca80267\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b9ee9add-4e59-48b2-8af4-da555ca80267')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -654,14 +654,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-81615a02-7e25-4136-a4e0-b82e4400f82b button');\n",
+              "        document.querySelector('#df-b9ee9add-4e59-48b2-8af4-da555ca80267 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_627d9997-92a2-4e0c-9b21-e79fee9e466b\">\n",
+              "  <div id=\"id_973147fe-7a01-48e2-a476-da7bc8776866\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -705,7 +705,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_627d9997-92a2-4e0c-9b21-e79fee9e466b button.colab-df-generate');\n",
+              "        document.querySelector('#id_973147fe-7a01-48e2-a476-da7bc8776866 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -725,11 +725,11 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 11
         }
       ],
       "source": [
-        "mci_df = pd.read_csv(\"Major_Crime_Indicators_Open_Data\")\n",
+        "mci_df = pd.read_csv(\"Major_Crime_Indicators\")\n",
         "mci_df"
       ]
     },
@@ -746,14 +746,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "id": "12632c7e",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "12632c7e",
-        "outputId": "12d34c13-9eb6-4bd2-b57d-df0731feb514"
+        "outputId": "3e4ef984-3eca-42b8-ddb7-ef4d02de53bc"
       },
       "outputs": [
         {
@@ -818,14 +818,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "id": "e79631de",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e79631de",
-        "outputId": "49b512a8-0e8a-4500-fc6f-466b6cf0ec41"
+        "outputId": "9550a10f-d984-4f63-984a-3fce481500d5"
       },
       "outputs": [
         {
@@ -873,14 +873,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "id": "a6094ebf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a6094ebf",
-        "outputId": "e7b839f5-b989-4ecd-8aa6-227c6bf8afa6"
+        "outputId": "797e46c3-d98c-409c-df7c-bd8232a73c52"
       },
       "outputs": [
         {
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 16,
       "id": "7beeaa11",
       "metadata": {
         "id": "7beeaa11"
@@ -918,10 +918,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "amRcTL6998CB",
-        "outputId": "83a86e26-79a7-4c59-a8e9-377a99a5c855"
+        "outputId": "917c5a27-4c00-4e58-ac80-269a06936b9e"
       },
       "id": "amRcTL6998CB",
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,20 +964,64 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "clean_mci_df = clean_mci_df.duplicated(subset=['EVENT_UNIQUE_ID']).sum()\n",
+        "print(f\"Total duplicate rows in 'EVENT_UNIQUE_ID': {clean_mci_df}\")"
+      ],
       "metadata": {
-        "id": "tpxI_pEy_rSm"
+        "id": "lhYc4tc2CkFb",
+        "outputId": "f8377664-d065-4f41-96a5-64c1e9e7efd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "id": "tpxI_pEy_rSm"
+      "id": "lhYc4tc2CkFb",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total duplicate rows in 'EVENT_UNIQUE_ID': 53910\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "cleaned_file_path = \"cleaned_data_mci.csv\"\n",
-        "clean_mci_df.to_csv(cleaned_file_path, index=False)\n",
+        "type(clean_mci_df)"
+      ],
+      "metadata": {
+        "id": "61cKVuEIEEKi",
+        "outputId": "54811497-96a0-4c5e-d610-1f919ef6deb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "61cKVuEIEEKi",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#cleaned_file_path = \"cleaned_data_mci.csv\"\n",
+        "#clean_mci_df.to_csv(cleaned_file_path, index=False)\n",
         "\n",
-        "print(f\"Cleaned file saved as {cleaned_file_path}\")"
+        "#print(f\"Cleaned file saved as {cleaned_file_path}\")"
       ],
       "metadata": {
         "colab": {
@@ -987,7 +1031,7 @@
         "outputId": "bc58e65d-58f9-49cc-b602-589469299d03"
       },
       "id": "Rx0KfKbw-Aid",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,6 +1041,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nRhAjN1BCbw1"
+      },
+      "id": "nRhAjN1BCbw1",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
